Resolvendo tarefa do layout de professores >> Ajuste no css: tamanho das divs da descricao e contrast. [4]

--- a/public/stylesheets/teachers.css
+++ b/public/stylesheets/teachers.css
@@ -139,6 +139,6 @@ table th,
 table td { padding: 3px; }
 table th { font-size: 13px; }
 
-#description { float: left;  font-size: 15px; padding-top: 75px; width: 600px; text-align: center; }
+#description { float: left;  font-size: 15px; padding-top: 75px; width: 580px; text-align: center; }
 #acessibilidade { float: right; }
 #top_figure { float: left; width: 155px; position: relative; margin-left: 0px; padding: 0; display:inline; }
